<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>systems_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="fmrico@gmail.com">fmrico</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rclcpp_cascade_lifecycle</depend>

  <depend>attention_system</depend>
  <depend>perception_system</depend>

  <exec_depend>yolov8_bringup</exec_depend>
  <exec_depend>rclpy_cascade_lifecycle</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
